# kiran-desktop

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  RELEASE.md
data/: kiran-desktop.pc.in
doc/kiran-desktop/: changelog
doc/kiranui/: changelog
docs/en/: _toc.yaml
docs/en/2209/: kiran_installation.md  kiran_user_guide.md
docs/zh/: _toc.yaml  kiran_user_guide.md
docs/zh/2209/: kiran_installation.md
example/: CMakeLists.txt  main.cpp  network-window.cpp  network-window.h  network-window.ui
example/network/: CMakeLists.txt  main.cpp  network-window.cpp  network-window.h
glib-2.0/schemas/: 99_kylin-mate.gschema.override
include/: network-common.h  nm-secret-agent.h  wireless-network-manager.h
lib/: def.h  logging-category.cpp  logging-category.h
lib/network/: network-common.cpp  nm-secret-agent-private.h  nm-secret-agent.cpp  wireless-network-manager-private.h  wireless-network-manager.cpp
src/: logging-category.cpp  logging-category.h  nm-secret-agent.cpp  wireless-network-manager-private.h  wireless-network-manager.cpp
src/network/: network-common.cpp  nm-secret-agent-private.h  wireless-network-manager-private.h  wireless-network-manager.cpp
